test/negative/601_index_nonint.fx
// expect: integer
val a = [1, 2, 3]
val b = a["x"]
println(b)
